tests/test-files/bad/RecordAliasDuplicateFields.elm
type alias Bad =
  List { foo : String, foo : Int }
